# purifier

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  lagging_issue_explanation.md  plan_01.md  plan_02.md  plan_03.md  plan_04.md  skills-lock.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_or_rules_mismatch.yml  improvement_request.yml
.github/workflows/: ci.yml
crates/purifier-core/: Cargo.toml
crates/purifier-core/src/: classifier.rs  filters.rs  lib.rs  llm.rs  provider.rs  rules.rs  scanner.rs  size.rs  types.rs
crates/purifier-tui/: Cargo.toml
crates/purifier-tui/src/: app.rs  columns.rs  config.rs  input.rs  main.rs  marks.rs  secrets.rs
crates/purifier-tui/src/ui/: columns_view.rs  dir_picker.rs  disclosures.rs  help_overlay.rs  mod.rs  onboarding.rs  preview_pane.rs  settings_modal.rs  status_bar.rs  tree_view.rs
docs/: ISSUES.md  plan_oss.md  repo_scope.md  worktree-app-reference.diff  worktree-event-loop-reference.diff
docs/superpowers/specs/: 2026-03-28-purifier-tui-design.md
rules/: default.toml
skills/: macos-spm-app-packaging
