[package]
name = "purifier-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Purifier — disk cleanup with safety classification"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jwalk = "0.8"
crossbeam-channel = "0.5"
glob = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
