[package]
name = "purifier-tui"
version = "0.1.0"
edition = "2021"
description = "TUI frontend for Purifier — disk cleanup with safety classification"

[[bin]]
name = "purifier"
path = "src/main.rs"

[dependencies]
purifier-core = { path = "../purifier-core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
